# F7

./: .gitignore  README.md  pyproject.toml  seek4.py  settings.demo.py  win_listener.py
F7/: __main__.py  clip.py  core.py  settingsUI.py  singleInstance.py  ui.py  window.py
F7/plugins/: base_plugin.py
F7/plugins/python_eval_plugin/: cyber.py  python_eval_plugin.py
f7/: clip.py  window.py
f7/plugins/: ai_ollama_plugin.py  cmd_plugin.py
f7/plugins/python_eval_plugin/: cyber.py  python_eval_plugin.py  python_utils.py  static_globals.py
shift/: seek4.py
slick_launcher/: __main__.py  api.py  clip.py  converters.py  core.py  hotkey.py  python_utils.py  settings.py  settingsUI.py  singleInstance.py  slick_launcher.py  types.py  ui.py  utils.py  window.py  workaround.py
slick_launcher/plugins/: __init__.py  ai_ollama_plugin.py  base_plugin.py  cmd_plugin.py  python_eval_plugin.py
slick_launcher/plugins/python_eval_plugin/: __init__.py  cyber.py  python_eval_plugin.py  python_utils.py  static_globals.py
