[project]
name = "f7"
version = "0.1.0"
description = ""
authors = [{ name = "matan h", email = "matan.honig2@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyqt6 (>=6.9.0,<7.0.0)",
    "pyperclip (>=1.9.0,<2.0.0)",
    "pyautogui (>=0.9.54,<0.10.0)",
    "ollama (>=0.4.8,<0.5.0)",
    "tomli (>=2.2.1,<3.0.0)",
    "tomli-w (>=1.2.0,<2.0.0)",
    "appdirs (>=1.4.4,<2.0.0)",
    "qt-material (>=2.17,<3.0)",
    "python-string-utils (>=1.0.0,<2.0.0)",
    "llama-cpp-python (>=0.3.9,<0.4.0)",
    "pynput (>=1.8.1,<2.0.0);sys_platform == 'win32'",
]

[tool.poetry.scripts]
F7 = "f7.__main__:main"
f7 = "f7.__main__:main"
F7-shift = "f7.__main__:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


# Content below this line added by briefcase convert
[tool.briefcase]
project_name = "F7"
bundle = "com.matan-h"
version = "0.0.1"
url = "https://matan-h.com"
license.file = "LICENSE"
author = "matan h"
author_email = "matan.honig2@gmail.com"

[tool.briefcase.app.f7]
formal_name = "F7"
description = ""
sources = ["f7"]
test_sources = ["test"]

test_requires = [
    # Add your cross-platform test requirements here
]

[tool.briefcase.app.f7.macOS]
universal_build = true
requires = [
    # Add your macOS-specific app requirements here
]

[tool.briefcase.app.f7.linux]
requires = [
    # Add your Linux-specific app requirements here
]

[tool.briefcase.app.f7.linux.system.debian]
system_requires = [
    # Add any system packages needed at build the app here
]

system_runtime_requires = [
    # Add any system packages needed at runtime here
]

[tool.briefcase.app.f7.linux.system.rhel]
system_requires = [
    # Add any system packages needed at build the app here
]

system_runtime_requires = [
    # Add any system packages needed at runtime here
]

[tool.briefcase.app.f7.linux.system.suse]
system_requires = [
    # Add any system packages needed at build the app here
]

system_runtime_requires = [
    # Add any system packages needed at runtime here
]

[tool.briefcase.app.f7.linux.system.arch]
system_requires = [
    # Add any system packages needed at build the app here
]

system_runtime_requires = [
    # Add any system packages needed at runtime here
]

[tool.briefcase.app.f7.linux.flatpak]
flatpak_runtime = "org.freedesktop.Platform"
flatpak_runtime_version = "24.08"
flatpak_sdk = "org.freedesktop.Sdk"

[tool.briefcase.app.f7.windows]
requires = [
    # Add your Windows-specific app requirements here
]
